build/live-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notiboy
  namespace: notiboy
  labels:
    app: notiboy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notiboy
  template:
    metadata:
      labels:
        app: notiboy
    spec:
      containers:
      - name: main
        image: localhost:32000/notiboy:live
        imagePullPolicy: Always
        ports:
        - containerPort: 11996
          name: http
