build/live-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: notiboy
  namespace: notiboy
spec:
  selector:
    app: notiboy
  ports:
  - port: 11996
