build/stage-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: notiboy-stage-ui
  namespace: notiboy
spec:
  selector:
    app: notiboy-stage-ui
  ports:
  - port: 11996
