build/live-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "3"
  name: notiboy
  namespace: notiboy
spec:
  ingressClassName: nginx
  rules:
  - host: "app.notiboy.com"
    http:
      paths:
      - backend:
          service:
            name: notiboy
            port:
              number: 11996
        path: /
        pathType: Prefix
  tls:
  - secretName: tls-cert
    hosts:
        - "app.notiboy.com"
status:
  loadBalancer:
    ingress:
    - ip: 94.237.98.28
